adapt to new aout API, part 2
Implement use of aout_Device* instead of abusing the "device" variable.
Implement use of aout_Device* instead of abusing the "device" variable.
changed milestone to %2.1 features
commit 6c2f2991 Author: Felix Paul Kühne fkuehne@videolan.org Date: Thu Jan 24 14:29:43 2013 +0100
auhal: implement audio device selection using the new aout API (close [#8037](https://code.videolan.org/videolan/vlc/-/issues/8037))
added Status::fixed label
closed
VideoLAN code repository instance