auhal: implement audio device selection using the new aout API (close #8037)